--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<div class="features-header text-center">
 							<div class="container-sm">
 								<h2 class="section-title mt-0">The Product</h2>
-	                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+	                            <p class="section-paragraph">We make it super easy to organize paperwork and plug directly into government EDIs in emerging economies.</p>
 								<div class="features-image">
 									<img class="features-illustration asset-dark" src="dist/images/features-illustration-dark.svg" alt="Feature illustration">
 									<img class="features-box asset-dark" src="dist/images/features-box-dark.svg" alt="Feature box">
@@ -84,8 +84,8 @@
 										<img class="asset-dark" src="dist/images/feature-01-dark.svg" alt="Feature 01">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Discover</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<h3 class="feature-title mt-0">Intuitive</h3>
+                                    	<p class="text-sm mb-0">Supply chain complexity is increasing. Your computer's files don't need to be. Our dashboard is designed for you to find everything exactly where you expect it.</p>
 									</div>
 								</div>
                             </div>
@@ -96,8 +96,8 @@
 										<img class="asset-dark" src="dist/images/feature-02-dark.svg" alt="Feature 02">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Discover</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<h3 class="feature-title mt-0">Specialized</h3>
+                                    	<p class="text-sm mb-0">Our team of experts is familiar with the compliance nuances of rare earth metals and specialized materials, specific to Japan, South Korea, India, and the DRC, with additional  support available for 30+ emerging economies.</p>
 									</div>
 								</div>
                             </div>
@@ -108,8 +108,8 @@
 										<img class="asset-dark" src="dist/images/feature-03-dark.svg" alt="Feature 03">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Discover</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<h3 class="feature-title mt-0">Effective</h3>
+                                    	<p class="text-sm mb-0">We plug you directly into our network of 3PL providers so you can trust your supply chain to be secure, compliant, and agile in response to disruption.</p>
 									</div>
 								</div>
                             </div>
@@ -122,10 +122,10 @@
                 <div class="container-sm">
                     <div class="cta-inner section-inner">
                         <div class="cta-header text-center">
-                            <h2 class="section-title mt-0">Get it and Switch</h2>
-                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <h2 class="section-title mt-0">Sign Up</h2>
+                            <p class="section-paragraph">Interested to learn more?</p>
 							<div class="cta-cta">
-								<a class="button button-primary" href="#">Buy it now</a>
+								<a class="button button-primary" href="https://forms.gle/exWbhda4J5tDXByv5">Sign Up Here</a>
 							</div>
 					    </div>
                     </div>
