--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en" class="no-js">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Switch Template</title>
+    <title>Sharp</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|IBM+Plex+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -34,7 +34,7 @@
 	                        <h1 class="hero-title mt-0">Procurement and Compliance for ESG Technology and Raw Materials</h1>
 	                        <p class="hero-paragraph">Streamline your import and export compliance.</p>
 	                        <div class="hero-cta">
-								<a class="button button-primary" href="#">Sign Up now</a>
+								<a class="button button-primary" href="https://forms.gle/exWbhda4J5tDXByv5">Sign Up now</a>
 								<div class="lights-toggle">
 									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
 									<label for="lights-toggle" class="text-xs"><span>Turn me <span class="label-text">dark</span></span></label>
@@ -123,7 +123,7 @@
                     <div class="cta-inner section-inner">
                         <div class="cta-header text-center">
                             <h2 class="section-title mt-0">Sign Up</h2>
-                            <p class="section-paragraph">Interested to learn more?</p>
+                            <p class="section-paragraph">Join our beta testing.</p>
 							<div class="cta-cta">
 								<a class="button button-primary" href="https://forms.gle/exWbhda4J5tDXByv5">Sign Up Here</a>
 							</div>
