--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 								<img class="hero-media-illustration-image asset-dark" src="dist/images/hero-media-illustration-dark.svg" alt="Hero media illustration">
 							</div>
 							<div class="hero-media-container">
-								<img class="hero-media-image asset-light" src="https://unsplash.com/photos/NndKt2kF1L4" alt="Hero media">
-								<img class="hero-media-image asset-dark" src="https://unsplash.com/photos/NndKt2kF1L4" alt="Hero media">
+								<img class="hero-media-image asset-light" src="https://images.unsplash.com/photo-1606185540834-d6e7483ee1a4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80">
+								<img class="hero-media-image asset-dark" src="https://images.unsplash.com/photo-1606185540834-d6e7483ee1a4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="Hero media">
 							</div>
 						</div>
                     </div>
